force-app/main/default/objects/leaseworks__Parent_Journal_Entry__c/leaseworks__Parent_Journal_Entry__c.object-meta.xml
<CustomObject>
    <label>Journal Entry</label>
    <nameField>
        <label>Journal Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Journal Entry</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>