force-app/main/default/objects/leaseworks__Parent_Journal_Entry__c/fields/leaseworks__Entity__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Entity__c</fullName>
    <formula>IF(NOT(ISBLANK(leaseworks__Entity_Lkp__c)),
HYPERLINK( &#39;/&#39;+ leaseworks__Entity_Lkp__c, leaseworks__Entity_Lkp__r.Name  ,&quot;_blank&quot;)
, HYPERLINK( &#39;/&#39;+ leaseworks__Entity_Id__c , leaseworks__Entity_Name__c  ,&quot;_blank&quot;))</formula>
    <label>Z_Unused_2403 Entity</label>
    <type>Text</type>
</CustomField>