force-app/main/default/objects/leaseworks__Parent_Journal_Entry__c/fields/leaseworks__Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Entity_Name__c</fullName>
    <description>Get the entity name from the transaction</description>
    <formula>null</formula>
    <label>Z_Unused_2403_Entity Name</label>
    <type>Text</type>
</CustomField>