force-app/main/default/objects/leaseworks__Parent_Journal_Entry__c/fields/leaseworks__Intercompany_Affiliate__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Intercompany_Affiliate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The intercompany entity that the transaction is associated with.</description>
    <inlineHelpText>The intercompany entity that the transaction is associated with.</inlineHelpText>
    <label>Intercompany Affiliate</label>
    <referenceTo>leaseworks__Entity__c</referenceTo>
    <relationshipLabel>Journal Entry (Intercompany Affiliate)</relationshipLabel>
    <relationshipName>Journal_Entry1</relationshipName>
    <type>Lookup</type>
</CustomField>