force-app/main/default/objects/leaseworks__Parent_Journal_Entry__c/fields/leaseworks__Journal_Source__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Journal_Source__c</fullName>
    <label>Journal Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Aircraft MR</fullName>
            </value>
            <value>
                <fullName>Security Deposit</fullName>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Head Lease/Sub Lease Rent</fullName>
            </value>
            <value>
                <fullName>Head Lease/Sub Lease Aircraft MR</fullName>
            </value>
            <value>
                <fullName>Head Lease/Sub Lease Security Deposit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>