force-app/main/default/objects/leaseworks__Parent_Journal_Entry__c/fields/leaseworks__Journal_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Journal_Type__c</fullName>
    <label>Journal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Operational</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>