force-app/main/default/objects/leaseworks__Parent_Journal_Entry__c/fields/leaseworks__Lessee__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lessee lookup for the payments</description>
    <label>Z_Unused_OP Lessee</label>
    <referenceTo>leaseworks__Operator__c</referenceTo>
    <relationshipLabel>Z_Unused_OP Journal Entry</relationshipLabel>
    <relationshipName>Journal_Entry</relationshipName>
    <type>Lookup</type>
</CustomField>