force-app/main/default/objects/leaseworks__Parent_Journal_Entry__c/fields/leaseworks__Lessee_New__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessee_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lessee lookup for the payments</description>
    <label>Lessee</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Operator</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Journal Entry</relationshipLabel>
    <relationshipName>Journal_Entry</relationshipName>
    <type>Lookup</type>
</CustomField>