force-app/main/default/objects/leaseworks__Parent_Journal_Entry__c/fields/leaseworks__LOC_Transactions__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__LOC_Transactions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>_LOC Transactions</label>
    <referenceTo>leaseworks__LOC_Transactions__c</referenceTo>
    <relationshipLabel>Journal Entry</relationshipLabel>
    <relationshipName>Journal_Entry</relationshipName>
    <type>Lookup</type>
</CustomField>