force-app/main/default/objects/leaseworks__Parent_Journal_Entry__c/fields/leaseworks__Payment_On_Account__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payment_On_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Payment on Account lookup</description>
    <label>Payment On Account</label>
    <referenceTo>leaseworks__Payment_on_Account_Line__c</referenceTo>
    <relationshipLabel>Journal Entry</relationshipLabel>
    <relationshipName>Journal_Entry</relationshipName>
    <type>Lookup</type>
</CustomField>