force-app/main/default/objects/leaseworks__Parent_Journal_Entry__c/fields/leaseworks__Payouts__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payouts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Copying the payout from the journal lines</description>
    <label>_Payouts</label>
    <referenceTo>leaseworks__Payout__c</referenceTo>
    <relationshipLabel>Journal Entry</relationshipLabel>
    <relationshipName>Journal_Entry</relationshipName>
    <type>Lookup</type>
</CustomField>