force-app/main/default/objects/leaseworks__Parent_Journal_Entry__c/fields/leaseworks__Reversed__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Reversed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the journal has been reversed.</description>
    <inlineHelpText>Indicates if the journal has been reversed.</inlineHelpText>
    <label>Reversed</label>
    <type>Checkbox</type>
</CustomField>