force-app/main/default/objects/leaseworks__Parent_Journal_Entry__c/fields/leaseworks__Transaction_Currency__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Transaction_Currency__c</fullName>
    <description>Currency of the associated transaction.</description>
    <inlineHelpText>Currency of the associated transaction.</inlineHelpText>
    <label>Transaction Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>leaseworks__Currency_GP</valueSetName>
    </valueSet>
</CustomField>