force-app/main/default/objects/leaseworks__Parent_Journal_Entry__c/fields/leaseworks__Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Transaction_Id__c</fullName>
    <description>To get the transaction id based on the transaction record</description>
    <formula>if( leaseworks__Invoice__c != null ,leaseworks__Invoice__r.Id,
if( leaseworks__Payments_Credits__c != null ,leaseworks__Payments_Credits__r.Id,
if( leaseworks__Payables__c != null ,leaseworks__Payables__r.Id,
if( leaseworks__Payouts__c != null , leaseworks__Payouts__r.Id,
if( leaseworks__Credit_Memo__c != null , leaseworks__Payments_Credits__r.Id,
if( leaseworks__Payment_On_Account__c !=null,leaseworks__Payment_On_Account__r.Id,
if( leaseworks__LOC_Transactions__c != null, leaseworks__LOC_Transactions__r.Id,&apos;&apos;
)
)
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Transaction Id</label>
    <type>Text</type>
</CustomField>