force-app/main/default/objects/leaseworks__Parent_Journal_Entry__c/validationRules/leaseworks__validateJournalNumberShouldNotBeChanged.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__validateJournalNumberShouldNotBeChanged</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  !$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c, 
  NOT(ISBLANK(Name)),
  ISCHANGED(Name)
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>You cannot modify a system-generated sequence.</errorMessage>
</ValidationRule>