force-app/main/default/objects/leaseworks__Parent_Journal_Entry__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Journal_Status__c</columns>
    <columns>leaseworks__Accounting_Period__c</columns>
    <columns>leaseworks__Transaction_Currency__c</columns>
    <columns>leaseworks__Journal_Amount_Number__c</columns>
    <columns>leaseworks__Journal_Source__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>